@@ -38,9 +38,9 @@ AllAccountsStatusContainer::~AllAccountsStatusContainer()
 void AllAccountsStatusContainer::accountRegistered(Account account)
 {
 	Accounts.append(account);
-	connect(account.statusContainer(), SIGNAL(statusUpdated()), this, SIGNAL(statusUpdated()));
+	connect(account.statusContainer(), SIGNAL(statusUpdated(StatusContainer *)), this, SIGNAL(statusUpdated(StatusContainer *)));
 
-	emit statusUpdated();
+	emit statusUpdated(this);
 }
 
 void AllAccountsStatusContainer::accountUnregistered(Account account)
@@ -48,7 +48,7 @@ void AllAccountsStatusContainer::accountUnregistered(Account account)
 	if (Accounts.removeAll(account) > 0)
 	{
 		disconnect(account.statusContainer(), 0, this, 0);
-		emit statusUpdated();
+		emit statusUpdated(this);
 	}
 }
 
